# HP-GEMM

./: .gitignore  CMakeLists.txt  README.md
benchmark/: bench_layer1.cpp  bench_layer2.cpp  bench_layer3.cpp  bench_layer4.cpp  bench_layer5.cpp  bench_main.cpp  timer.h
docs/: layer1.md  layer2.md  layer3.md  layer4.md  layer5.md  perf.md  performance_results.md
include/: gemm_blas.h  gemm_common.h  gemm_cuda.h  gemm_naive.h  gemm_openmp.h  gemm_simd.h
results/: .gitkeep
scripts/: build_cpu.sh  build_cuda.sh  run_benchmarks.sh
src/layer1/: gemm_blocked.cpp  gemm_ikj.cpp  gemm_naive.cpp
src/layer2/: gemm_avx2.cpp  gemm_simd_blocked.cpp
src/layer3/: gemm_openmp.cpp
src/layer4/: gemm_cuda_naive.cu  gemm_cuda_shared.cu
src/layer5/: gemm_openblas.cpp
tests/: test_layer1.cpp  test_layer2.cpp  test_layer3.cpp  test_layer4.cpp  test_layer5.cpp  test_main.cpp
